--- a/nginx/conf/vhost/hello.conf
+++ b/nginx/conf/vhost/hello.conf
@@ -4,8 +4,6 @@ server {
 
     #charset utf-8;
 
-    access_log  logs/access.log;
-
 	root /work/yphp/php/;
 	index  index.php index.html index.htm;
 
@@ -34,4 +32,7 @@ server {
         fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
         include        fastcgi_params;
     }
+	
+	access_log  logs/access.log;
+    error_log  logs/error.log;
 }
