update php etc;add nginx conf

--- a/php/etc56/php.ini
+++ b/php/etc56/php.ini
@@ -2028,3 +2028,26 @@ ldap.max_links = -1
 ; Local Variables:
 ; tab-width: 4
 ; End:
+
+;extension=redis.so
+;extension=swoole.so
+;extension=yar.so
+;extension=yac.so
+;extension=phalcon.so
+;extension=seaslog.so
+;extension=gearman.so
+;extension=mongodb.so
+;extension=tideways.so
+;extension=protobuf.so
+;extension=msgpack.so
+
+[xdebug]
+;zend_extension=xdebug.so
+;xdebug.enable=1
+;xdebug.remote_enable=1
+;xdebug.remote_connect_back=1
+# IDE所在机器IP
+;xdebug.remote_host=192.168.99.1
+# IDE里监听的端口
+;xdebug.remote_port=19001
+;xdebug.remote_log=/var/log/xdebug_remote.log
