--- a/nginx/conf/vhost/hello71.conf
+++ b/nginx/conf/vhost/hello71.conf
@@ -1,6 +1,6 @@
 server {
     listen       80;
-    server_name  hello.cc;
+    server_name  hello71.cc;
 
     #charset utf-8;
 
@@ -27,7 +27,7 @@ server {
     #
     location ~ \.php$ {
         
-        fastcgi_pass   127.0.0.1:9000;
+        fastcgi_pass   yphp71:9000;
         fastcgi_index  index.php;
         fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
         include        fastcgi_params;
