--- a/php/etc/php.ini
+++ b/php/etc/php.ini
@@ -1931,15 +1931,27 @@ ldap.max_links = -1
 ; Local Variables:
 ; tab-width: 4
 ; End:
-extension=swoole.so
-extension=redis.so
-extension=yar.so
-extension=msgpack.so
-extension=protobuf.so
-extension=yac.so
-extension=yaconf.so
-extension=mongodb.so
-extension=seaslog.so
-extension=phalcon.so
-extension=tideways.so
-extension=gearman.so
+
+;extension=swoole.so
+;extension=redis.so
+;extension=yar.so
+;extension=msgpack.so
+;extension=protobuf.so
+;extension=yac.so
+;extension=yaconf.so
+;extension=mongodb.so
+;extension=seaslog.so
+;extension=phalcon.so
+;extension=tideways.so
+;extension=gearman.so
+
+[xdebug]
+;zend_extension=xdebug.so
+;xdebug.enable=1
+;xdebug.remote_enable=1
+;xdebug.remote_connect_back=1
+# IDE所在机器IP
+;xdebug.remote_host=192.168.99.1
+# IDE里监听的端口
+;xdebug.remote_port=19001
+;xdebug.remote_log=/var/log/xdebug_remote.log
