--- a/php/etc56/php.ini
+++ b/php/etc56/php.ini
@@ -2046,8 +2046,8 @@ ldap.max_links = -1
 ;xdebug.enable=1
 ;xdebug.remote_enable=1
 ;xdebug.remote_connect_back=1
-# IDE所在机器IP
+; IDE所在机器IP
 ;xdebug.remote_host=192.168.99.1
-# IDE里监听的端口
+; IDE里监听的端口
 ;xdebug.remote_port=19001
 ;xdebug.remote_log=/var/log/xdebug_remote.log
