--- a/php/etc/php.ini
+++ b/php/etc/php.ini
@@ -1954,4 +1954,5 @@ ldap.max_links = -1
 ;xdebug.remote_host=192.168.99.1
 ; IDE里监听的端口
 ;xdebug.remote_port=19001
+;xdebug.remote_autostart=1
 ;xdebug.remote_log=/var/log/xdebug_remote.log
